# subseq_graph

./: AGENTS.md  Cargo.toml  README.md
benches/: mutation_checks.rs
design/: example-graph-api-server.md  frontend-graph-api-spec.md  graph-ease-of-use-deltas.md  graph-kind-invariants.md  mcp-auth-requirements.md
examples/: graph_api_server.rs
migrations/: 20260208000100_base_graph.sql  20260208000200_group_role_policies.sql  20260208000300_drop_group_allowed_roles.sql  20260208000400_graph_kind.sql  20260208000500_graph_metadata_indexes.sql
src/: algorithms.rs  api.rs  db.rs  error.rs  invariants.rs  lib.rs  models.rs  operations.rs  permissions.rs
